--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Português</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="livro.css">
+
 </head>
 <body>
     <header>
-        <a href="pagina2.html"><img src="aluiso.jpeg" alt=""></a>
+        <div class="book">
+            <a href="pagina2.html"><p>Aluísio Azevedo</p></a>
+            
+            <div class="cover">
+                <img src="aluiso.jpeg">
+            </div>
+        </div>
     </header>
     <div class="content">
 
