--- a/index.html
+++ b/index.html
@@ -5,18 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Português</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="livro.css">
+    <link rel="stylesheet" href="card.css">
 
 </head>
 <body>
     <header>
-        <div class="book">
-            <a href="pagina2.html"><p>Aluísio Azevedo</p></a>
-            
-            <div class="cover">
-                <img src="aluiso.jpeg">
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <img src="aluiso.jpeg">
+                </div>
+                <div class="flip-card-back">
+                    <h1>ad</h1>
+                    <p>fsadfa</p>
+                </div>
             </div>
         </div>
+        
     </header>
     <div class="content">
 
