--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <title>Português</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="card.css">
+    <script src="JavaScrip.js"></script>
 
 </head>
 <body>
     <header>
-        <div class="flip-card">
+        <div class="flip-card" onmouseover="flipCard(this)" onmouseout="unflipCard(this)">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
                     <img src="aluiso.jpeg">
                 </div>
                 <div class="flip-card-back">
-                    <h1>ad</h1>
-                    <p>fsadfa</p>
+                    <a href="pagina2.html"><h1>Aluísio Azevedo</h1></a>
                 </div>
             </div>
         </div>
