--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Português</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="card.css">
-    <script src="JavaScrip.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/card.css">
+    <script src="script/JavaScrip.js"></script>
 
 </head>
 <body>
@@ -14,7 +14,7 @@
         <div class="flip-card" onmouseover="flipCard(this)" onmouseout="unflipCard(this)">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
-                    <img src="aluiso.jpeg">
+                    <img src="images/aluiso.jpeg">
                 </div>
                 <div class="flip-card-back">
                     <a href="pagina2.html"><h1>Aluísio Azevedo</h1></a>
