--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/card.css">
     <script src="script/JavaScrip.js"></script>
+    <link rel="shortcut icon" href="" type="image">
 
 </head>
 <body>
@@ -24,7 +25,10 @@
         
     </header>
     <div class="content">
-
+        <div class="Leo"><img src="images/Leonardo.jpeg">Leonardo Rocha Pontim</div>
+        <div class="Art"><img src="images/Arthur.jpeg">Arthur Felipe Nicolau Gilis</div>
+        <div class="Car"><img src="images/Carlos.jpeg">Carlos Eduardo Pericaro </div>
+        <div class="Hel"><img src="images/Heloisa.jpeg">Heloisa Favero Mezari</div>
     </div>
     
 </body>
