--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <div class="content">
         <div class="Leo"><img src="images/Leonardo.jpeg">Leonardo Rocha Pontim</div>
-        <div class="Art"><img src="images/Arthur.JPEG">Arthur Felipe Nicolau Gilis</div>
+        <div class="Art"><img src="images/Arthur.jpeg">Arthur Felipe Nicolau Gilis</div>
         <div class="Car"><img src="images/Carlos.jpeg">Carlos Eduardo Pericaro </div>
         <div class="Hel"><img src="images/Heloisa.jpeg">Heloisa Favero Mezari</div>
     </div>
