--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
                     <img src="images/aluiso.jpeg">
                 </div>
                 <div class="flip-card-back">
-                    <a href="pagina2.html"><h1>Aluísio Azevedo</h1></a>
+                    <a href=""><h1>Aluísio Azevedo</h1></a>
                 </div>
             </div>
         </div>
         
     </header>
     <div class="content">
-        <div class="Leo"><img src="images/Leonardo.jpeg">Leonardo Rocha Pontim</div>
+        <div class="Leo"><img src="images/Leonardo.jpeg"><a href="pagina2.html">Leonardo Rocha Pontim</a></div>
         <div class="Art"><img src="images/Arthur.jpeg">Arthur Felipe Nicolau Gilis</div>
         <div class="Car"><img src="images/Carlos.jpeg">Carlos Eduardo Pericaro </div>
         <div class="Hel"><img src="images/Heloisa.jpeg">Heloisa Favero Mezari</div>
