--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Português</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/card.css">
-    <script src="script/JavaScrip.js"></script>
-    <link rel="shortcut icon" href="https://www.utfpr.edu.br/icones/cabecalho/logo-utfpr/@@images/efcf9caf-6d29-4c24-8266-0b7366ea3a40.png" type="image">
+    <link rel="shortcut icon"
+        href="https://www.utfpr.edu.br/icones/cabecalho/logo-utfpr/@@images/efcf9caf-6d29-4c24-8266-0b7366ea3a40.png"
+        type="image">
 
 </head>
+
 <body>
     <header>
         <div class="flip-card" onmouseover="flipCard(this)" onmouseout="unflipCard(this)">
@@ -18,21 +21,24 @@
                     <img src="images/aluiso.jpeg">
                 </div>
                 <div class="flip-card-back">
-                    <a href=""><h1>Aluísio Azevedo</h1></a>
+                    <a href="">
+                        <h1>Aluísio Azevedo</h1>
+                    </a>
                 </div>
             </div>
         </div>
-        
+
     </header>
-    <div class="content hidden">
-        <div class="Leo" data-aos="fade-down"><img src="images/Leonardo.jpeg"><a href="pagina2.html">Leonardo Rocha Pontim</a></div>
-        <div class="Art" data-aos="fade-down"><img src="images/Arthur.jpeg">Arthur Felipe Nicolau Gilis</div>
-        <div class="Car" data-aos="fade-down"><img src="images/Carlos.jpeg">Carlos Eduardo Pericaro </div>
-        <div class="Hel" data-aos="fade-down"><img src="images/Heloisa.jpeg">Heloisa Favero Mezari</div>
-    </div>
-    <div class="ultima">
-        
-    </div>
+
+        <div class="content hidden">
+            <div class="Leo hidden"><img src="images/Leonardo.jpeg"><a href="pagina2.html">Leonardo Rocha Pontim</a></div>
+            <div class="Art hidden"><img src="images/Arthur.jpeg">Arthur Felipe Nicolau Gilis</div>
+            <div class="Car hidden"><img src="images/Carlos.jpeg">Carlos Eduardo Pericaro </div>
+            <div class="Hel hidden"><img src="images/Heloisa.jpeg">Heloisa Favero Mezari</div>
+        </div>
+
+
 </body>
 <script src="/script/JavaScrip.js"></script>
+<script src="/script/jsAnmt.js"></script>
 </html>
