--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="head">
         <div class="flip-card" onmouseover="flipCard(this)" onmouseout="unflipCard(this)">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
@@ -22,7 +22,7 @@
                 </div>
                 <div class="flip-card-back">
                     <a href="">
-                        <h1>Aluísio Azevedo</h1>
+                        <h1><a href="main.html">Aluísio Azevedo</a></h1>
                     </a>
                 </div>
             </div>
@@ -30,11 +30,12 @@
 
     </header>
 
-        <div class="content hidden">
+        <div class="content ">
             <div class="Leo hidden"><img src="images/Leonardo.jpeg"><a href="pagina2.html">Leonardo Rocha Pontim</a></div>
             <div class="Art hidden"><img src="images/Arthur.jpeg">Arthur Felipe Nicolau Gilis</div>
             <div class="Car hidden"><img src="images/Carlos.jpeg">Carlos Eduardo Pericaro </div>
             <div class="Hel hidden"><img src="images/Heloisa.jpeg">Heloisa Favero Mezari</div>
+            <div class="Edu hidden"><img src="images/Eduardo.jpeg">Eduardo Da Silva</div>
         </div>
 
 
