--- a/pagina2.html
+++ b/pagina2.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body background="images/Leonardo.jpeg">
+<body class="dfas" background="images/Leonardo.jpeg">
     
 </body>
+<style>
+    .dfas{
+        height: 50000px;
+    }
+</style>
 </html>
