--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body>
+<body id="bod">
     <header id="head">
         <div class="flip-card" onmouseover="flipCard(this)" onmouseout="unflipCard(this)">
             <div class="flip-card-inner">
