--- a/main.html
+++ b/main.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <title>Apresentação</title>
+    <link rel="stylesheet" href="css/style.css">
     <script src="/script/jsAnmt.js"></script>
+    <link rel="shortcut icon"
+        href="https://www.utfpr.edu.br/icones/cabecalho/logo-utfpr/@@images/efcf9caf-6d29-4c24-8266-0b7366ea3a40.png"
+        type="image">
 </head>
 <body>
     <nav>
