--- a/paginas/index.html
+++ b/paginas/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Português</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon"
         href="https://www.utfpr.edu.br/icones/cabecalho/logo-utfpr/@@images/efcf9caf-6d29-4c24-8266-0b7366ea3a40.png"
         type="image">
@@ -17,7 +17,7 @@
         <div class="flip-card" onmouseover="flipCard(this)" onmouseout="unflipCard(this)">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
-                    <img src="images/aluiso.jpeg">
+                    <img src="/images/aluiso.jpeg">
                 </div>
                 <div class="flip-card-back">
                     <a href="">
