--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Português</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon"
         href="https://www.utfpr.edu.br/icones/cabecalho/logo-utfpr/@@images/efcf9caf-6d29-4c24-8266-0b7366ea3a40.png"
         type="image">
@@ -17,11 +17,11 @@
         <div class="flip-card" onmouseover="flipCard(this)" onmouseout="unflipCard(this)">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
-                    <img src="/images/aluiso.jpeg">
+                    <img src="images/aluiso.jpeg">
                 </div>
                 <div class="flip-card-back">
                     <a href="">
-                        <h1><a href="main.html">Aluísio Azevedo</a></h1>
+                        <h1><a href="paginas/main.html">Aluísio Azevedo</a></h1>
                     </a>
                 </div>
             </div>
@@ -39,6 +39,6 @@
 
 
 </body>
-<script src="/script/JavaScrip.js"></script>
-<script src="/script/jsAnmt.js"></script>
+<script src="script/JavaScrip.js"></script>
+<script src="script/jsAnmt.js"></script>
 </html>
