--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apresentação</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="/script/jsAnmt.js"></script>
+    <script src="script/jsAnmt.js"></script>
     <link rel="shortcut icon"
         href="https://www.utfpr.edu.br/icones/cabecalho/logo-utfpr/@@images/efcf9caf-6d29-4c24-8266-0b7366ea3a40.png"
         type="image">
@@ -20,7 +20,7 @@
                 <li><a href="#livro">Sobre</a></li>
                 <li><a href="#resumo">História</a></li>
                 <li><a href="#conclusao">Conclusão</a></li>
-                <li><a id="voltar" href="/index.html">Voltar</a></li>
+                <li><a id="voltar" href="index.html">Voltar</a></li>
             </ul>
         </nav>
     <div class="container2" #container2>
