--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </div>
                 <div class="flip-card-back">
                     <a href="">
-                        <h1><a href="paginas/main.html">Aluísio Azevedo</a></h1>
+                        <h1><a href="main.html">Aluísio Azevedo</a></h1>
                     </a>
                 </div>
             </div>
