--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
 
         <div class="content ">
-            <div class="Leo hidden"><img src="images/Leonardo.jpeg"><a href="pagina2.html">Leonardo Rocha Pontim</a></div>
+            <div class="Leo hidden"><img src="images/Leonardo.jpeg"><a href="paginas/pagina2.html">Leonardo Rocha Pontim</a></div>
             <div class="Art hidden"><img src="images/Arthur.jpeg">Arthur Felipe Nicolau Gilis</div>
             <div class="Car hidden"><img src="images/Carlos.jpeg">Carlos Eduardo Pericaro </div>
             <div class="Hel hidden"><img src="images/Heloisa.jpeg">Heloisa Favero Mezari</div>
