--- a/main.html
+++ b/main.html
@@ -15,12 +15,12 @@
             <div class="logo">
                 <img src="https://www.utfpr.edu.br/icones/cabecalho/logo-utfpr/@@images/efcf9caf-6d29-4c24-8266-0b7366ea3a40.png" alt="">
             </div>
-            <ul class="links slide-left">
-                <li><a href="#autor">Autor</a></li>
-                <li><a href="#livro">Sobre</a></li>
-                <li><a href="#resumo">História</a></li>
-                <li><a href="#conclusao">Conclusão</a></li>
-                <li><a id="voltar" href="index.html">Voltar</a></li>
+            <ul>
+                <li><a class="links slide-left" href="#autor">Autor</a></li>
+                <li><a class="links slide-left" href="#livro">Sobre</a></li>
+                <li><a class="links slide-left" href="#resumo">História</a></li>
+                <li><a class="links slide-left" href="#conclusao">Conclusão</a></li>
+                <li><a class="links slide-left" id="voltar" href="index.html">Voltar</a></li>
             </ul>
         </nav>
     <div class="container2" #container2>
