--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="Art hidden"><img src="images/Arthur.jpeg">Arthur Felipe Nicolau Gilis</div>
             <div class="Car hidden"><img src="images/Carlos.jpeg">Carlos Eduardo Pericaro </div>
             <div class="Hel hidden"><img src="images/Heloisa.jpeg">Heloisa Favero Mezari</div>
-            <div class="Edu hidden"><img src="images/Eduardo.jpeg">Eduardo Da Silva</div>
+            <div class="Edu hidden"><img src="images/edu.jpg">Eduardo Da Silva</div>
         </div>
 
 
