--- a/main.html
+++ b/main.html
@@ -11,23 +11,23 @@
         type="image">
 </head>
 <body>
-    <nav>
+    <nav id="nav">
             <div class="logo">
                 <img src="https://www.utfpr.edu.br/icones/cabecalho/logo-utfpr/@@images/efcf9caf-6d29-4c24-8266-0b7366ea3a40.png" alt="">
             </div>
             <ul>
-                <li><a class="links slide-left" href="#autor">Autor</a></li>
-                <li><a class="links slide-left" href="#livro">Sobre</a></li>
-                <li><a class="links slide-left" href="#resumo">História</a></li>
-                <li><a class="links slide-left" href="#conclusao">Conclusão</a></li>
-                <li><a class="links slide-left" id="voltar" href="index.html">Voltar</a></li>
+                <li><a class="links" href="#autor">Autor</a></li>
+                <li><a class="links" href="#livro">Sobre</a></li>
+                <li><a class="links" href="#resumo">História</a></li>
+                <li><a class="links" href="#conclusao">Conclusão</a></li>
+                <li><a class="links" id="voltar" href="index.html">Voltar</a></li>
             </ul>
         </nav>
     <div class="container2" #container2>
         
         <div class="content2">
             <div class="Autor" id="autor">
-            <h1 class="slide-left">Aluísio Azevedo</h1>
+            <h1 class="slide-left" id="aut">Aluísio Azevedo</h1>
                 <p class="slide-left">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam, corporis. Officia recusandae, qui ex hic numquam dolor quod molestiae sint explicabo aliquid eos, esse fugit quam harum. Consequatur, beatae. At.</p>
                 <p class="slide-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero corporis nostrum aliquam rem, veritatis inventore, quo reiciendis iure error, fugiat tempore accusamus dolorem alias animi aspernatur dolorum similique optio harum!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro ullam, doloribus aliquam ex ducimus cumque reprehenderit mollitia impedit eligendi architecto deleniti soluta velit. Animi eius vero culpa eligendi vitae delectus! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam vitae maiores nostrum iure nesciunt, vero consectetur dolor tenetur labore debitis animi sit aut aperiam odio! Sapiente labore est enim nobis? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam dicta sapiente fuga quos eligendi ipsa, praesentium iusto quis, porro excepturi nisi perferendis doloremque, ea harum eveniet quia quidem iste magni! ipsum, dolor sit amet consectetur adipisicing elit. Corporis eveniet sint voluptas tempora voluptatibus, quas nam quia dolorum, cum incidunt fugit, nesciunt voluptatum exercitationem ut ipsa aliquid officiis doloribus? Fugiat?</p>
 
@@ -51,5 +51,4 @@
     </div>
     
 </body>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </html>
