--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
         type="image">
 </head>
 <body>
-    
+    <div class="menu"></div>
     <nav id="nav">
             <div class="logo">
                 <img src="https://www.utfpr.edu.br/icones/cabecalho/logo-utfpr/@@images/efcf9caf-6d29-4c24-8266-0b7366ea3a40.png" alt="">
@@ -23,6 +23,9 @@
                 <li><a class="links" href="#conclusao">Conclusão</a></li>
                 <li><a class="links" id="voltar" href="index.html">Voltar</a></li>
             </ul>
+            <div class="mob">
+                <p>menu</p>
+            </div>
         </nav>
     <div class="container2" #container2>
         <div class="content2">
