--- a/main.html
+++ b/main.html
@@ -21,26 +21,31 @@
                 <li><a class="links" href="#conclusao">Conclusão</a></li>
                 <li><a class="links" id="voltar" href="index.html">Voltar</a></li>
             </ul>
-            <div class="mob"><p>menu</p></div>
+            <div class="mob" ><p onclick="menufc(this)" id="mostrarMenu">menu</p></div>
         </nav>
         <div class="content2">
+            <div class="menu"></div>
             <div class="Autor" id="autor">
                 <h1 class="slide-left" id="aut">Aluísio Azevedo</h1>
                 <p class="slide-left">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam, corporis. Officia recusandae, qui ex hic numquam dolor quod molestiae sint explicabo aliquid eos, esse fugit quam harum. Consequatur, beatae. At.</p>
-                <p class="slide-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero corporis nostrum aliquam rem, veritatis inventore, quo reiciendis iure error, fugiat tempore accusamus dolorem alias animi aspernatur dolorum similique optio harum!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro ullam, doloribus aliquam ex ducimus cumque reprehenderit mollitia impedit eligendi architecto deleniti soluta velit. Animi eius vero culpa eligendi vitae delectus! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam vitae maiores nostrum iure nesciunt, vero consectetur dolor tenetur labore debitis animi sit aut aperiam odio! Sapiente labore est enim nobis? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam dicta sapiente fuga quos eligendi ipsa, praesentium iusto quis, porro excepturi nisi perferendis doloremque, ea harum eveniet quia quidem iste magni! ipsum, dolor sit amet consectetur adipisicing elit. Corporis eveniet sint voluptas tempora voluptatibus, quas nam quia dolorum, cum incidunt fugit, nesciunt voluptatum exercitationem ut ipsa aliquid officiis doloribus? Fugiat?</p>
+                <p class="slide-left">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam, corporis. Officia recusandae, qui ex hic numquam dolor quod molestiae sint explicabo aliquid eos, esse fugit quam harum. Consequatur, beatae. At.</p>
+                <p class="slide-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero corporis nostrum aliquam rem, veritatis inventore, quo reiciendis iure error, fugiat tempore accusamus dolorem alias animi aspernatur dolorum similique</p>
             </div>
             <div class="Livro" id="livro" >
                 <h1 class="slide-left" id="livro">Sobre o Livro</h1>
+                <p class="slide-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt necessitatibus quos, atque rerum excepturi unde reiciendis est quam repellendus harum magnam, quibusdam voluptate illo? Impedit inventore ab enim aliquam consequatur.</p>
                 <p class="slide-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt necessitatibus quos, atque rerum excepturi unde reiciendis est quam repellendus harum magnam, quibusdam voluptate illo? Impedit inventore ab enim aliquam consequatur.</p>
                 <p class="slide-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui repellendus cupiditate, esse, architecto deleniti rerum illo quia ipsum id enim laborum aspernatur! Non reprehenderit culpa veniam sit labore dicta soluta.</p>
             </div>
             <div class="Resumo" id="resumo">
                 <h1 class="slide-left">História contada</h1>
                 <p class="slide-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti nemo quidem neque dolorem assumenda cumque, aut soluta fugiat officia nulla. Quae facilis sapiente, ut voluptatem libero doloribus quo sequi quos!</p>
+                <p class="slide-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti nemo quidem neque dolorem assumenda cumque, aut soluta fugiat officia nulla. Quae facilis sapiente, ut voluptatem libero doloribus quo sequi quos!</p>
                 <p class="slide-left">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima molestias voluptate error facilis sint qui! Provident nostrum non culpa laborum, alias repellat, iste explicabo dolor, nemo fugit et minus tenetur.</p>
             </div>
             <div class="Conclusao" id="conclusao">
                 <h1 class="slide-left">Conclusão</h1>
+                <p class="slide-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde ducimus corporis id expedita tempora quo sint aspernatur aliquam laboriosam! Reprehenderit cumque corrupti velit, consequuntur ipsam voluptatibus dicta officia ullam? Voluptatibus!</p>
                 <p class="slide-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde ducimus corporis id expedita tempora quo sint aspernatur aliquam laboriosam! Reprehenderit cumque corrupti velit, consequuntur ipsam voluptatibus dicta officia ullam? Voluptatibus!</p>
                 <p class="slide-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, blanditiis. Aliquid sint possimus, sequi temporibus voluptate quae, sunt voluptatem magnam libero rerum omnis non iure obcaecati. Perferendis facilis eos officia?</p>
             </div>
