--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apresentação</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="script/jsAnmt.js"></script>
+    <script src="/script/jsAnmt.js"></script>
     <link rel="shortcut icon"
         href="https://www.utfpr.edu.br/icones/cabecalho/logo-utfpr/@@images/efcf9caf-6d29-4c24-8266-0b7366ea3a40.png"
         type="image">
@@ -21,10 +21,15 @@
                 <li><a class="links" href="#conclusao">Conclusão</a></li>
                 <li><a class="links" id="voltar" href="index.html">Voltar</a></li>
             </ul>
-            <div class="mob" ><p onclick="menufc(this)" id="mostrarMenu">menu</p></div>
+            <div onclick="mostrarMenu()" class="mob">
+                <p id="butao">menu</p>
+            </div>
+            <!-- <button onclick="mostrarMenu()" class="mob" id="butao">Menu</button> -->
         </nav>
+        <div id="menu" class="menu">aaaaaaaaaaaaaaaaaaaaaaaaaaaaa</div>
         <div class="content2">
-            <div class="menu"></div>
+            
+
             <div class="Autor" id="autor">
                 <h1 class="slide-left" id="aut">Aluísio Azevedo</h1>
                 <p class="slide-left">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam, corporis. Officia recusandae, qui ex hic numquam dolor quod molestiae sint explicabo aliquid eos, esse fugit quam harum. Consequatur, beatae. At.</p>
