--- a/main.html
+++ b/main.html
@@ -25,8 +25,17 @@
             </div>
             <!-- <button onclick="mostrarMenu()" class="mob" id="butao">Menu</button> -->
         </nav>
-        <div id="menu" class="menu">aaaaaaaaaaaaaaaaaaaaaaaaaaaaa</div>
-        <div class="content2">
+        <div id="menu" class="menu">
+            <ul class="ulmenu">
+                <li><a class="links" href="#autor">Autor</a></li>
+                <li><a class="links" href="#livro">Sobre</a></li>
+                <li><a class="links" href="#resumo">História</a></li>
+                <li><a class="links" href="#conclusao">Conclusão</a></li>
+                <li><a class="links" id="voltar" href="index.html">Voltar</a></li>
+            </ul>
+
+        </div>
+        <div class="content2" id="content2">
             
             
             <div class="Autor" id="autor">
@@ -55,7 +64,6 @@
             </div>
         </div>
     </div>
-    <div class="sexo">a</div>
 </body>
 <script src="script/jsAnmt.js"></script>    
 </html>
