--- a/main.html
+++ b/main.html
@@ -23,10 +23,9 @@
             <div onclick="mostrarMenu()" class="mob">
                 <p id="butao">menu</p>
             </div>
-            <!-- <button onclick="mostrarMenu()" class="mob" id="butao">Menu</button> -->
         </nav>
         <div id="menu" class="menu">
-            <ul class="ulmenu">
+            <ul class="menu">
                 <li><a class="links" href="#autor">Autor</a></li>
                 <li><a class="links" href="#livro">Sobre</a></li>
                 <li><a class="links" href="#resumo">História</a></li>
