--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container2" #container2>
         <nav id="nav">
-            <div class="logo"><img class="img" src="https://www.utfpr.edu.br/icones/cabecalho/logo-utfpr/@@images/efcf9caf-6d29-4c24-8266-0b7366ea3a40.png" alt=""></div>
+            <div><img class="img logo" src="https://www.utfpr.edu.br/icones/cabecalho/logo-utfpr/@@images/efcf9caf-6d29-4c24-8266-0b7366ea3a40.png" alt=""></div>
             <ul>
                 <li><a class="links" href="#autor">Autor</a></li>
                 <li><a class="links" href="#livro">Sobre</a></li>
