--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
                 <img class="img" id="imgC" onclick="mostrarMenu()" src="images/close.svg" alt="">
             </div>
         </nav>
-        <div id="menu" class="menu">
+        <div id="menu" >
             <ul class="menu">
                 <li><a class="links" href="#autor">Autor</a></li>
                 <li><a class="links" href="#livro">Sobre</a></li>
