--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <div class="content ">
             <div class="Leo hidden"><img src="images/Leonardo.jpeg"><a href="paginas/pagina2.html">Leonardo Rocha Pontim</a></div>
-            <div class="Art hidden"><img src="images/Arthur.jpeg">Arthur Felipe Nicolau Gilis</div>
+            <!-- <div class="Art hidden"><img src="images/Arthur.jpeg">Arthur Felipe Nicolau Gilis</div> -->
             <div class="Car hidden"><img src="images/Carlos.jpeg">Carlos Eduardo Pericaro </div>
             <div class="Hel hidden"><img src="images/Heloisa.jpeg">Heloisa Favero Mezari</div>
             <div class="Edu hidden"><img src="images/edu.jpg">Eduardo Da Silva</div>
