--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="profs">
                     <h1>Professores</h1>
                     <div id="liberato" onclick="rafa()" class="liberato hidden"><img  src="images/liberato.jpeg" >Rafael Liberato</div>
-                    <div id="liberatoContent" style="display: none;"><p>Rafael Liberato é doutor em ciências da computação pela USP, e atualmente atua como professor de DW no ensino técnio na UTFPR, em suas aulas é ensinado o uso de HTML, CSS e JavaScrip de maneira dinâmica e eficiente.</p></div>
+                    <div id="liberatoContent" style="display: none;"><p>Rafael Liberato é doutor em ciências da computação pela USP, e atualmente atua como professor de Desenvolvimento Web I e II no ensino técnio na UTFPR para os alunos do segundo, terceiro e quarto ano.</p><p> Em suas aulas, realizadas no laboratório de informatica, é ensinado o uso de HTML, CSS e JavaScrip de maneira dinâmica e eficiente.</p></div>
                     <div id="sandra" onclick="sandra()" class="sandra hidden"><img src="images/sandra.jpeg" >Sandra Aleixo</div>
                     <div id="sandraContent" style="display: none;"><p>Sandra Aleixo é doutada em Letras pela UFPR, é professora na utf desde 2006 dando aula de Língua Portuguesa. Atualmente atua apenas no Terceiro ano. </p> <p>Suas aulas muito bem preparadas, dinâmicas e únicas, nós somos capazes de aprender com excelência diversos movimentos literarios, gramática e também a literatura, tópico cujo sempre é reforçado e incentivado.</p></div>
                 </div>
